--- a/blocoanotacoes.html
+++ b/blocoanotacoes.html
@@ -52,9 +52,9 @@
                                 <div style="padding:10px 20px;">
                                     <h3>Área restrita</h3>
                                     <label for="admLogin" class="ui-hidden-accessible">Login:</label>
-                                    <input type="text" name="admLogin" id="admLogin" value="max" placeholder="Login" data-theme="a">
+                                    <input type="text" name="admLogin" id="admLogin" value="" placeholder="Login" data-theme="a">
                                     <label for="admSenha" class="ui-hidden-accessible">Senha:</label>
-                                    <input type="password" name="admSenha" id="admSenha" value="max" placeholder="Senha" data-theme="a">
+                                    <input type="password" name="admSenha" id="admSenha" value="" placeholder="Senha" data-theme="a">
                                     <button type="button" id="sendLogin" class="ui-btn ui-corner-all ui-shadow ui-btn-b ui-btn-icon-left ui-icon-check">Enviar</button>
                                 </div>
                             
