--- a/perguntas.html
+++ b/perguntas.html
@@ -60,6 +60,7 @@
                 <li ><label for="select-choice-a" class="select">Em qual sala você está?</label>
                     <select name="perguntasSalasId" id="perguntasSalasId" data-native-menu="false">
                         <option>Selecione uma Sala</option>
+                        <option value="3">Estou na Plenária</option>
                         <option value="1">Estou na Sala 1</option>
                         <option value="2">Estou na Sala 2</option>
                     </select>
